# astra-update

./: BUILD.txt  CMakeLists.txt  README.md
cmake/: CMakeLists.linux.txt  CMakeLists.macos.txt  CMakeLists.windows.txt  cxxopts-cstdint.cmake  yaml-cpp-cmake-version.cmake  yaml-cpp-cstdint.cmake
config/: 99-astra-update.rules
include/: astra_device.hpp  astra_device_manager.hpp  astra_log.hpp  flash_image.hpp  image.hpp
lib/: CMakeLists.txt  astra_boot_image.cpp  astra_boot_image.hpp  astra_console.cpp  astra_console.hpp  astra_device.cpp  astra_device_impl.cpp  astra_device_impl_internal.hpp  astra_device_impl_sl16xx.cpp  astra_device_impl_sl26xx.cpp  astra_device_manager.cpp  astra_log.cpp  boot_image_collection.cpp  boot_image_collection.hpp  device.hpp  emmc_flash_image.cpp  emmc_flash_image.hpp  fastboot_device.cpp  fastboot_device.hpp  flash_image.cpp  image.cpp  libusb_device.cpp  libusb_device.hpp  libusb_transport.cpp  libusb_transport.hpp  nand_flash_image.cpp  nand_flash_image.hpp  posix_usb_cdc_device.cpp  posix_usb_cdc_device.hpp  posix_usb_cdc_transport.cpp  posix_usb_cdc_transport.hpp  posix_usb_cdc_transport_impl.hpp  posix_usb_cdc_transport_linux.cpp  posix_usb_cdc_transport_macos.cpp  spi_flash_image.cpp  spi_flash_image.hpp  usb_cdc_device.cpp  usb_cdc_device.hpp  usb_cdc_transport.cpp  usb_cdc_transport.hpp  (+14 more)
src/: CMakeLists.txt  astra-boot.cpp  astra-update.cpp
tools/: generate_boot_manifest.py
